# serializer version: 1
# name: test_e2e_sample_projects[cmake_vcpkg_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating .devcontainer directory and copying timestamp helper script.',
        'Creating devcontainer.json configuration file.',
        'Creating Dockerfile with Ubuntu base, C++ toolchain, and vcpkg for dependency management.',
        'Creating run_all_tests.sh script to execute tests and generate JUnit XML reports.',
        'Building the dev container image to verify configuration.',
        'Running tests inside the container to verify everything works.',
        'Running final verification test to ensure reproducibility.',
      ]),
      'summary': 'Successfully created dev container for C++ CMake+vcpkg project. All tests pass. Key optimization: pre-installed vcpkg dependencies and pre-built project in Docker layers dramatically speed up test runs. Tip: For C++ projects with package managers like vcpkg, copying manifest files early and installing dependencies in separate layers before copying source code provides excellent layer caching.',
      'timed_out': False,
    }),
    'error_message': None,
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'CMakeTests::test_greeter',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
# name: test_e2e_sample_projects[python_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Verifying existing devcontainer setup and testing build.',
        'Building Docker image with devcontainer build.',
        'Build failed due to network connectivity. Updating devcontainer.json to fix network access during build.',
        'Rebuilding Docker image with network access enabled.',
        'Build successful. Running tests in the container.',
        'Tests passed. Verifying test artifacts were generated correctly.',
        'Running final verification build and test.',
        'Final verification complete. Documenting devcontainer structure.',
      ]),
      'summary': 'Everything worked. The devcontainer successfully builds and runs all tests. Key tip: Modal requires --network=host in build options (use "options" not "args" in devcontainer.json) and UV_LINK_MODE=copy to avoid symlink issues with Modal\'s snapshot mechanism. The uv package manager provides fast dependency installation with excellent layer caching.',
      'timed_out': False,
    }),
    'error_message': None,
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'tests.test_app::test_add',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'tests.test_app::test_multiply',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
